Add /runs endpoit
